--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,18 +1,40 @@
-@font-face{
-    font-family: 'Quicksand-Regular';
+@font-face {
+    font-family: "DaysOne-Regular";
     font-weight: 400;
     font-style: normal;
-    src: local('Quicksand-Regular'),
-        url('../fonts/Quicksand-Regular.woff2') format('woff2'),
-        url('../fonts/Quicksand-Regular.woff') format('woff');
+    src: local("DaysOne-Regular"), url("../fonts/DaysOne-Regular.woff2") format("woff2"),
+        url("../fonts/DaysOne-Regular.woff") format("woff");
     font-display: swap;
 }
-@font-face{
-    font-family: 'Quicksand-Medium';
+@font-face {
+    font-family: "Roboto-Regular";
+    font-weight: 400;
+    font-style: normal;
+    src: local("Roboto-Regular"), url("../fonts/Roboto-Regular.woff2") format("woff2"),
+        url("../fonts/Roboto-Regular.woff") format("woff");
+    font-display: swap;
+}
+@font-face {
+    font-family: "Roboto-Medium";
     font-weight: 500;
     font-style: normal;
-    src: local('Quicksand-Medium'),
-        url('../fonts/Quicksand-Medium.woff2') format('woff2'),
-        url('../fonts/Quicksand-Medium.woff') format('woff');
+    src: local("Roboto-Medium"), url("../fonts/Roboto-Medium.woff2") format("woff2"),
+        url("../fonts/Roboto-Medium.woff") format("woff");
+    font-display: swap;
+}
+@font-face {
+    font-family: "Roboto-Bold";
+    font-weight: 700;
+    font-style: normal;
+    src: local("Roboto-Bold"), url("../fonts/Roboto-Bold.woff2") format("woff2"),
+        url("../fonts/Roboto-Bold.woff") format("woff");
+    font-display: swap;
+}
+@font-face {
+    font-family: "Roboto-Black";
+    font-weight: 900;
+    font-style: normal;
+    src: local("Roboto-Black"), url("../fonts/Roboto-Black.woff2") format("woff2"),
+        url("../fonts/Roboto-Black.woff") format("woff");
     font-display: swap;
 }
