--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,12 @@ body {
 body {
     display: flex;
     flex-direction: column;
+    @extend %robo-400;
+    font-size: 18px;
+    background-image: url("../images/bg.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #5a5a5a;
 }
 
 main {
@@ -13,7 +19,7 @@ main {
 }
 
 .container {
-    max-width: 1040px;
+    max-width: 1440px;
     padding: 0 200px;
     margin: 0 auto;
 }
