added responsive header and footer

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,7 +9,7 @@ body {
     @extend %robo-400;
     font-size: 18px;
     background-image: url("../images/bg.webp");
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
     background-size: cover;
     background-color: #5a5a5a;
 }
