--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -43,7 +43,23 @@
         padding: 0 15px;
     }
 
+    .header {
+        background-color: #2e2e2e;
+        position: fixed;
+        z-index: 100;
+        width: 100%;
+    }
+
     .header-top {
+        display: block;
+        min-height: 141px;
+
+        &__logo-img {
+            max-width: 190px;
+        }
+        &__links {
+            max-width: 230px;
+        }
         // Кнопка Бургер меню ---------------------------->
         &__mob-menu {
             display: block;
@@ -121,6 +137,41 @@
             text-align: center;
             width: 305px;
             overflow: auto;
+        }
+    }
+
+    .footer {
+        // margin: 20px 0;
+        min-height: 130px;
+        &__inner {
+            justify-content: space-between;
+            flex-direction: column;
+            margin-top: 20px;
+            text-align: center;
+            flex-wrap: wrap;
+        }
+        &__rights {
+            margin-top: 15px;
+        }
+        &__designer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 15px;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .header-top {
+        min-height: 111px;
+
+        &__logo-img {
+            max-width: 140px;
+        }
+        &__links {
+            max-width: 200px;
+            margin-left: 18px;
         }
     }
 }
