--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -222,11 +222,18 @@
         max-width: 750px;
         margin-bottom: 68px;
     }
+
     &__btns {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
         margin-bottom: 32px;
+    }
+    &__dpa-btns {
+        justify-content: center;
+    }
+    &__dpa-btns .zno__dpa {
+        margin-right: 31px;
     }
     &__btn {
         display: block;
@@ -287,6 +294,7 @@
         line-height: 46px;
         text-align: center;
         color: #0633ce;
+        text-transform: uppercase;
         @extend %days-400;
     }
     &__cours-lenth {
@@ -330,7 +338,7 @@
         line-height: 28px;
         color: #2e2e2e;
         @extend %robo-700;
-        margin-left: 20px;
+        margin-left: 30px;
         margin-bottom: 32px;
     }
     &__order {
@@ -358,6 +366,78 @@
 
     &__courses-center {
         margin-top: 130px;
+    }
+}
+
+.school {
+    padding-top: 100px;
+
+    &__title {
+        line-height: 50px;
+        padding: 5px 0px;
+        font-size: 42px;
+        margin-bottom: 12px;
+    }
+    &__text {
+        text-align: center;
+        font-size: 24px;
+        line-height: 31px;
+        color: #2e2e2e;
+        @extend %days-400;
+    }
+
+    &__inner {
+        margin-top: 27px;
+        margin-bottom: 100px;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    &__items {
+        max-width: 307px;
+        margin-bottom: 9px;
+    }
+    &__items-title {
+        font-size: 18px;
+        line-height: 16px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #ffffff;
+        background-color: #2e2e2e;
+        border-radius: 4px;
+        padding: 9px 0;
+        margin-bottom: 15px;
+        @extend %robo-900;
+    }
+
+    &__items-wrap {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    &__item {
+        width: 124px;
+        font-size: 18px;
+        line-height: 16px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #2e2e2e;
+        background-color: #fff;
+        border: 2px solid #2e2e2e;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding: 9px 0;
+        margin-bottom: 15px;
+        @extend %robo-900;
+        transition: all 0.3s;
+        &:hover {
+            background-color: rgb(198, 228, 255);
+        }
     }
 }
 
