added a registration page

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -155,6 +155,9 @@
     }
 
     .about {
+        &__reg {
+            padding-top: 170px;
+        }
         &__img {
             margin-top: 80px;
             width: 450px;
@@ -163,6 +166,11 @@
         &__title {
             margin-bottom: 48px;
             max-width: 340px;
+        }
+        &__title-reg {
+            padding: 0 0;
+            line-height: 50px;
+            max-width: 600px;
         }
     }
 
@@ -305,9 +313,18 @@
             height: 250px;
         }
 
+        &__inner-reg {
+            min-height: 500px;
+        }
+
         &__title {
             margin-bottom: 30px;
             max-width: 250px;
+        }
+        &__title-reg {
+            padding: 0 0;
+            line-height: 30px;
+            max-width: 600px;
         }
         &__text,
         &__descr {
@@ -330,6 +347,25 @@
 
         &__descr {
             margin-top: 32px;
+        }
+
+        &__btn-order {
+            max-width: 320px;
+            margin-top: 33px;
+            font-size: 16px;
+            line-height: 16px;
+            text-align: center;
+            border-radius: 30px;
+            padding: 7px 10px;
+        }
+        &__btn-back {
+            display: block;
+            margin: 0 auto;
+            text-align: center;
+            max-width: 320px;
+            margin-top: 26px;
+            border-radius: 30px;
+            padding: 7px 10px;
         }
     }
 
