--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -145,6 +145,10 @@
 
 .about {
     margin-bottom: 100px;
+
+    &__reg {
+        padding-top: 70px;
+    }
     &__img {
         display: block;
         margin: 0 auto;
@@ -171,6 +175,12 @@
         margin-bottom: 68px;
         max-width: 360px;
     }
+
+    &__title-reg {
+        line-height: 50px;
+        max-width: 100%;
+    }
+
     &__text,
     &__descr {
         display: block;
@@ -187,6 +197,10 @@
     &__items {
         max-width: 750px;
         margin: 0 auto;
+    }
+
+    &__items-reg {
+        max-width: 660px;
     }
 
     &__item {
@@ -210,6 +224,49 @@
     &__descr {
         margin-top: 62px;
         max-width: 485px;
+    }
+
+    &__btn-order {
+        display: block;
+        margin: 0 auto;
+        max-width: 700px;
+        margin-top: 33px;
+        font-size: 18px;
+        line-height: 16px;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #ffffff;
+        background: #4eb1f6;
+        border: 2px solid #4eb1f6;
+        text-align: center;
+        border-radius: 100px;
+        padding: 14px 24px;
+        @extend %days-400;
+        transition: all 0.3s;
+        &:hover {
+            background: #0281db;
+            box-shadow: 0px 7px 8px 3px rgba(34, 60, 80, 0.2);
+        }
+    }
+    &__btn-back {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        max-width: 441px;
+        margin-top: 26px;
+        background: #ffffff;
+        color: #2e2e2e;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        border: 3px solid #2e2e2e;
+        box-sizing: border-box;
+        border-radius: 100px;
+        padding: 14px 24px;
+        @extend %days-400;
+        transition: all 0.3s;
+        &:hover {
+            background: #dceaff;
+        }
     }
 }
 
